# cpp-compiler

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  tests
docker/: Dockerfile
frontend/: CMakeLists.txt
frontend/src/: CMakeLists.txt  main.test.cpp  parser.cpp  parser.h  parser.test.cpp  scanner.cpp  scanner.h  scanner.test.cpp  token.h
frontend/src/ast/: CMakeLists.txt  ast.h  node.h  node.test.cpp  operator.h
